# IR-CIS-536

./: .gitignore  README.md  __init__.py  algorithm.py  dictionary-0.txt  dictionary.txt  dictionary0.txt  dstructures.py  engine.py  engine_io.py  gui.py  indexing.py  lexers.py  main.py  preprocessing.py  pyproject.toml  requirements.txt  scorer.py  setup.py  unigram.py  unigrams.txt
cleverchuk/: __init__.py
cleverchuk/lib/: algorithm.py  fs.py  indexing.py
discourse-classification/: data.json  discourse.py  preprocessing.py  requirements.txt
engine/: engine.py  scorer.py
inverted-index/: indexing_algorithms.py  preprocessing.py
lib/: algorithm.py  codec.py  engine_io.py  indexing.py  lexers.py
partial-indexing/: indexing.py
search-engine/: engine.py  gui.py  indexing.py  requirements.txt  scorer.py
unigram/: README.txt
